--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,9 +10,11 @@
             height: 98vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-position: center center;
             background-size: cover;
+            background-attachment: fixed;
+            
         }
 
         main {
@@ -28,7 +30,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum reprehenderit beatae ipsa, necessitatibus eum animi. Omnis, libero. Aliquid aspernatur perspiciatis iusto dignissimos cum minima doloribus, tempore, autem natus libero voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi exercitationem ipsa consectetur nobis maxime quibusdam et recusandae dolores nam. Distinctio earum ea obcaecati possimus placeat ipsam rem, odit suscipit consequatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis tempora sapiente incidunt fuga repellendus sed, aliquid cum dicta cumque praesentium! Consequatur hic excepturi consequuntur explicabo tenetur laudantium quia, nam repudiandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum reprehenderit beatae ipsa, necessitatibus eum animi. Omnis, libero. Aliquid aspernatur perspiciatis iusto dignissimos cum minima doloribus, tempore, autem natus libero voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi exercitationem ipsa consectetur nobis maxime quibusdam et recusandae dolores nam. Distinctio earum ea obcaecati possimus placeat ipsam rem, odit suscipit consequatur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis tempora sapiente incidunt fuga repellendus sed, aliquid cum dicta cumque praesentium! Consequatur hic excepturi consequuntur explicabo tenetur laudantium quia, nam repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias blanditiis cumque fuga nostrum excepturi asperiores rem dolorem pariatur exercitationem, deleniti odit architecto aspernatur hic. Qui adipisci blanditiis et! Ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla distinctio unde perspiciatis iure iusto incidunt perferendis officia alias quas ab laboriosam deleniti ipsa dolore dignissimos optio, officiis fugiat odio hic? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat repellendus officiis a dolor vitae vel, praesentium hic totam blanditiis molestiae illo aspernatur dolorem harum consequatur exercitationem asperiores rem et necessitatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, accusamus consequuntur expedita quo impedit consequatur mollitia doloribus odio fugiat voluptatibus voluptas porro beatae ullam fugit? Assumenda omnis fuga laudantium sequi?</p>
     </main>
     
 </body>
